--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,22 +7,22 @@
 
     <fragment
         android:id="@+id/cartFragment"
-        android:name="com.rusen.capstoneproject.CartFragment"
+        android:name="com.rusen.capstoneproject.ui.cart.CartFragment"
         android:label="fragment_cart"
         tools:layout="@layout/fragment_cart" />
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.rusen.capstoneproject.HomeFragment"
+        android:name="com.rusen.capstoneproject.ui.home.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/favoritesFragment"
-        android:name="com.rusen.capstoneproject.FavoritesFragment"
+        android:name="com.rusen.capstoneproject.ui.favorites.FavoritesFragment"
         android:label="fragment_favorites"
         tools:layout="@layout/fragment_favorites" />
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.rusen.capstoneproject.SearchFragment"
+        android:name="com.rusen.capstoneproject.ui.search.SearchFragment"
         android:label="fragment_search"
         tools:layout="@layout/fragment_search" />
 </navigation>
