--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <color name="black">#2f3640</color>
+    <color name="white">#ffffff</color>
+    <color name="grey">#dfe4ea</color>
+    <color name="dark_grey">#485460</color>
+    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/grey</color>
 
     <color name="bottom_nav_item">#FF000000</color>
     <color name="bottom_nav_selected_item">#0E0E0E</color>
