Uygulama iconu degistirildi. Splash Activity eklendi.

--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -1,170 +1,120 @@
-<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
+    android:viewportWidth="375"
+    android:viewportHeight="375">
+  <path
+      android:pathData="M-37.5,-37.5h450v450h-450z"
+      android:fillColor="#ffffff"/>
+  <group>
+    <clip-path
+        android:pathData="M0,0.02L374.99,0.02L374.99,375L0,375ZM0,0.02"/>
     <path
-        android:fillColor="#3DDC84"
-        android:pathData="M0,0h108v108h-108z" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M9,0L9,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,0L19,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M29,0L29,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M39,0L39,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M49,0L49,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M59,0L59,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M69,0L69,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M79,0L79,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M89,0L89,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M99,0L99,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,9L108,9"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,19L108,19"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,29L108,29"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,39L108,39"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,49L108,49"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,59L108,59"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,69L108,69"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,79L108,79"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,89L108,89"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,99L108,99"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,29L89,29"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,39L89,39"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,49L89,49"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,59L89,59"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,69L89,69"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,79L89,79"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M29,19L29,89"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M39,19L39,89"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M49,19L49,89"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M59,19L59,89"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M69,19L69,89"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M79,19L79,89"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
+        android:pathData="M0,0.02L0,375L374.99,375L374.99,0.02ZM0,0.02"
+        android:fillType="nonZero">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="374.99"
+            android:startY="375.01"
+            android:endX="-0"
+            android:endY="0.02"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFF5F6FA"/>
+          <item android:offset="0.03" android:color="#FFF5F6FA"/>
+          <item android:offset="0.05" android:color="#FFF5F6FA"/>
+          <item android:offset="0.06" android:color="#FFF4F5F9"/>
+          <item android:offset="0.08" android:color="#FFF3F4F8"/>
+          <item android:offset="0.09" android:color="#FFF2F4F7"/>
+          <item android:offset="0.11" android:color="#FFF2F3F6"/>
+          <item android:offset="0.13" android:color="#FFF1F2F6"/>
+          <item android:offset="0.14" android:color="#FFF0F1F5"/>
+          <item android:offset="0.16" android:color="#FFEFF0F4"/>
+          <item android:offset="0.17" android:color="#FFEEEFF3"/>
+          <item android:offset="0.19" android:color="#FFEDEFF2"/>
+          <item android:offset="0.2" android:color="#FFEDEEF1"/>
+          <item android:offset="0.22" android:color="#FFECEDF1"/>
+          <item android:offset="0.23" android:color="#FFEBECF0"/>
+          <item android:offset="0.25" android:color="#FFEAEBEF"/>
+          <item android:offset="0.27" android:color="#FFE9EAEE"/>
+          <item android:offset="0.28" android:color="#FFE8EAED"/>
+          <item android:offset="0.3" android:color="#FFE8E9ED"/>
+          <item android:offset="0.31" android:color="#FFE7E8EC"/>
+          <item android:offset="0.33" android:color="#FFE6E7EB"/>
+          <item android:offset="0.34" android:color="#FFE5E6EA"/>
+          <item android:offset="0.36" android:color="#FFE4E5E9"/>
+          <item android:offset="0.38" android:color="#FFE3E5E8"/>
+          <item android:offset="0.39" android:color="#FFE3E4E8"/>
+          <item android:offset="0.41" android:color="#FFE2E3E7"/>
+          <item android:offset="0.42" android:color="#FFE1E2E6"/>
+          <item android:offset="0.44" android:color="#FFE0E1E5"/>
+          <item android:offset="0.45" android:color="#FFDFE0E4"/>
+          <item android:offset="0.47" android:color="#FFDEE0E3"/>
+          <item android:offset="0.48" android:color="#FFDEDFE3"/>
+          <item android:offset="0.5" android:color="#FFDDDEE2"/>
+          <item android:offset="0.5" android:color="#FFDCDDE1"/>
+          <item android:offset="0.5" android:color="#FFDDDEE1"/>
+          <item android:offset="0.52" android:color="#FFDDDEE2"/>
+          <item android:offset="0.52" android:color="#FFDDDEE2"/>
+          <item android:offset="0.53" android:color="#FFDEDFE2"/>
+          <item android:offset="0.54" android:color="#FFDEDFE3"/>
+          <item android:offset="0.55" android:color="#FFDFE0E3"/>
+          <item android:offset="0.55" android:color="#FFDFE0E4"/>
+          <item android:offset="0.56" android:color="#FFE0E1E4"/>
+          <item android:offset="0.57" android:color="#FFE1E2E5"/>
+          <item android:offset="0.58" android:color="#FFE1E2E5"/>
+          <item android:offset="0.59" android:color="#FFE2E3E6"/>
+          <item android:offset="0.59" android:color="#FFE2E3E6"/>
+          <item android:offset="0.6" android:color="#FFE3E4E7"/>
+          <item android:offset="0.61" android:color="#FFE4E4E7"/>
+          <item android:offset="0.62" android:color="#FFE4E5E8"/>
+          <item android:offset="0.63" android:color="#FFE5E6E8"/>
+          <item android:offset="0.63" android:color="#FFE5E6E9"/>
+          <item android:offset="0.64" android:color="#FFE6E7EA"/>
+          <item android:offset="0.65" android:color="#FFE7E7EA"/>
+          <item android:offset="0.66" android:color="#FFE7E8EB"/>
+          <item android:offset="0.66" android:color="#FFE8E9EB"/>
+          <item android:offset="0.67" android:color="#FFE8E9EC"/>
+          <item android:offset="0.68" android:color="#FFE9EAEC"/>
+          <item android:offset="0.69" android:color="#FFEAEAED"/>
+          <item android:offset="0.7" android:color="#FFEAEBED"/>
+          <item android:offset="0.7" android:color="#FFEBEBEE"/>
+          <item android:offset="0.71" android:color="#FFEBECEE"/>
+          <item android:offset="0.72" android:color="#FFECEDEF"/>
+          <item android:offset="0.73" android:color="#FFEDEDEF"/>
+          <item android:offset="0.73" android:color="#FFEDEEF0"/>
+          <item android:offset="0.74" android:color="#FFEEEEF0"/>
+          <item android:offset="0.75" android:color="#FFEEEFF1"/>
+          <item android:offset="0.76" android:color="#FFEFF0F1"/>
+          <item android:offset="0.77" android:color="#FFF0F0F2"/>
+          <item android:offset="0.77" android:color="#FFF0F1F2"/>
+          <item android:offset="0.78" android:color="#FFF1F1F3"/>
+          <item android:offset="0.79" android:color="#FFF1F2F3"/>
+          <item android:offset="0.8" android:color="#FFF2F2F4"/>
+          <item android:offset="0.8" android:color="#FFF3F3F4"/>
+          <item android:offset="0.81" android:color="#FFF3F4F5"/>
+          <item android:offset="0.82" android:color="#FFF4F4F5"/>
+          <item android:offset="0.83" android:color="#FFF4F5F6"/>
+          <item android:offset="0.84" android:color="#FFF5F5F6"/>
+          <item android:offset="0.84" android:color="#FFF6F6F7"/>
+          <item android:offset="0.85" android:color="#FFF6F6F7"/>
+          <item android:offset="0.86" android:color="#FFF7F7F8"/>
+          <item android:offset="0.87" android:color="#FFF7F8F8"/>
+          <item android:offset="0.88" android:color="#FFF8F8F9"/>
+          <item android:offset="0.88" android:color="#FFF9F9FA"/>
+          <item android:offset="0.89" android:color="#FFF9F9FA"/>
+          <item android:offset="0.9" android:color="#FFFAFAFB"/>
+          <item android:offset="0.91" android:color="#FFFAFBFB"/>
+          <item android:offset="0.91" android:color="#FFFBFBFC"/>
+          <item android:offset="0.92" android:color="#FFFCFCFC"/>
+          <item android:offset="0.93" android:color="#FFFCFCFD"/>
+          <item android:offset="0.94" android:color="#FFFDFDFD"/>
+          <item android:offset="0.95" android:color="#FFFDFDFE"/>
+          <item android:offset="0.95" android:color="#FFFEFEFE"/>
+          <item android:offset="0.97" android:color="#FFFFFFFF"/>
+          <item android:offset="1" android:color="#FFFFFFFF"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+  </group>
 </vector>
