Cart ekraninda tumunu sil islemi yapildi.

--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -19,6 +19,7 @@
         app:title="@string/my_cart">
 
         <TextView
+            android:id="@+id/ivClearCart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
