--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -46,7 +46,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="8dp"
-            android:text="@string/baslik"
+            android:text="@string/title"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +69,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:text="@string/fiyat"
+            android:text="@string/price"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
@@ -81,7 +81,7 @@
             android:layout_gravity="bottom"
             android:layout_marginEnd="8dp"
             android:backgroundTint="@color/black"
-            android:text="@string/sepete_ekle"
+            android:text="@string/add_to_basket"
             android:textColor="@color/white"
             app:cornerRadius="0dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -93,7 +93,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:text="@string/indirimli_fiyat"
+            android:text="@string/discound_price"
             android:textSize="18sp"
             app:layout_constraintEnd_toStartOf="@+id/btnAddToBasket"
             app:layout_constraintStart_toEndOf="@+id/tvPrice"
@@ -106,7 +106,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
-            android:text="@string/aciklama"
+            android:text="@string/description"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
