--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="white">#ffffff</color>
     <color name="grey">#dfe4ea</color>
     <color name="dark_grey">#485460</color>
+    <color name="green">#34A339</color>
     <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/grey</color>
 
     <color name="bottom_nav_item">#FF000000</color>
