--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,7 +11,7 @@
         android:title="@string/search" />
     <item
         android:id="@+id/favoritesFragment"
-        android:icon="@drawable/ic_favorite"
+        android:icon="@drawable/ic_favorite_filled"
         android:title="@string/favorites" />
     <item
         android:id="@+id/cartFragment"
